fixing bug 198947 - instaling xpi again, create *.old files (from this package) in place orginal. r=darin, sr=dmose, a=asa